BUG FIX: calendar day coloring to indication past vs future now works correctly for months other than the current month; tweak monthly calendar cell height to make full calendar visible on a single screen when little or nothing is scheduled

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -77,7 +77,7 @@ div.day-number	{
 td.calendar-day,
 td.calendar-day-np {
     width:500px;
-    height: 110px;
+    height: 60px;
     padding:10px;
     border-bottom:1px solid #999;
     border-right:1px solid #999;
